# newtoncotes-trapesium3.0

./: CMakeLists.txt  galat.cpp  galat.h  hitung.cpp  hitung.h  integrasinumerik.cpp  mainwindow.cpp  mainwindow.ui  mainwindow2.cpp  mainwindow2.ui  mainwindow3.ui  mathparser.h  temp.ui
form/: mainwindow.ui  mainwindow2.ui
headerFile/: integrasinumerik.h  mainwindow.h  mainwindow2.h  mainwindow3.h  mathparser.h
sourceFiles/: galat.cpp  main.cpp  mainwindow.cpp  mainwindow2.cpp  mainwindow3.cpp
